// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthDetails renders deployments failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
        "requests": Object {
          "requestCount": 0,
          "requestErrorCount": 0,
        },
      }
    }
    id="svc"
    rateInterval={600}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <strong>
          <Icon
            name="error-circle-o"
            type="pf"
          />
           Deployments Status:
        </strong>
        <ul
          style={
            Object {
              "listStyleType": "none",
              "paddingLeft": 12,
            }
          }
        >
          <li>
            <Icon
              name="error-circle-o"
              type="pf"
            />
             
            A
            : 
            0
             / 
            10
          </li>
          <li>
            <Icon
              name="ok"
              type="pf"
            />
             
            B
            : 
            2
             / 
            2
          </li>
        </ul>
        <strong>
          <Icon
            name="warning-triangle-o"
            type="pf"
          />
           Envoy Health:
        </strong>
         1 / 10
        <br />
        <strong>
          <span
            style={
              Object {
                "color": "#72767b",
              }
            }
          >
            N/A
          </span>
           Error Rate:
        </strong>
         No requests over last 10 minutes
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <strong>
            <Icon
              name="error-circle-o"
              type="pf"
            />
             Deployments Status:
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="error-circle-o"
                type="pf"
              />
               
              A
              : 
              0
               / 
              10
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              B
              : 
              2
               / 
              2
            </li>
          </ul>
          <strong>
            <Icon
              name="warning-triangle-o"
              type="pf"
            />
             Envoy Health:
          </strong>
           1 / 10
          <br />
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate:
          </strong>
           No requests over last 10 minutes
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders envoy degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 1,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
        "requests": Object {
          "requestCount": 0,
          "requestErrorCount": 0,
        },
      }
    }
    id="svc"
    rateInterval={600}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <strong>
          <Icon
            name="ok"
            type="pf"
          />
           Deployments Status:
        </strong>
        <ul
          style={
            Object {
              "listStyleType": "none",
              "paddingLeft": 12,
            }
          }
        >
          <li>
            <Icon
              name="ok"
              type="pf"
            />
             
            A
            : 
            1
             / 
            1
          </li>
          <li>
            <Icon
              name="ok"
              type="pf"
            />
             
            B
            : 
            2
             / 
            2
          </li>
        </ul>
        <strong>
          <Icon
            name="warning-triangle-o"
            type="pf"
          />
           Envoy Health:
        </strong>
         1 / 10
        <br />
        <strong>
          <span
            style={
              Object {
                "color": "#72767b",
              }
            }
          >
            N/A
          </span>
           Error Rate:
        </strong>
         No requests over last 10 minutes
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <strong>
            <Icon
              name="ok"
              type="pf"
            />
             Deployments Status:
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              A
              : 
              1
               / 
              1
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              B
              : 
              2
               / 
              2
            </li>
          </ul>
          <strong>
            <Icon
              name="warning-triangle-o"
              type="pf"
            />
             Envoy Health:
          </strong>
           1 / 10
          <br />
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate:
          </strong>
           No requests over last 10 minutes
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders healthy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 1,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
        "requests": Object {
          "requestCount": 0,
          "requestErrorCount": 0,
        },
      }
    }
    id="svc"
    rateInterval={600}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <strong>
          <Icon
            name="ok"
            type="pf"
          />
           Deployments Status:
        </strong>
        <ul
          style={
            Object {
              "listStyleType": "none",
              "paddingLeft": 12,
            }
          }
        >
          <li>
            <Icon
              name="ok"
              type="pf"
            />
             
            A
            : 
            1
             / 
            1
          </li>
          <li>
            <Icon
              name="ok"
              type="pf"
            />
             
            B
            : 
            2
             / 
            2
          </li>
        </ul>
        <strong>
          <Icon
            name="ok"
            type="pf"
          />
           Envoy Health:
        </strong>
         1 / 1
        <br />
        <strong>
          <span
            style={
              Object {
                "color": "#72767b",
              }
            }
          >
            N/A
          </span>
           Error Rate:
        </strong>
         No requests over last 10 minutes
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <strong>
            <Icon
              name="ok"
              type="pf"
            />
             Deployments Status:
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              A
              : 
              1
               / 
              1
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              B
              : 
              2
               / 
              2
            </li>
          </ul>
          <strong>
            <Icon
              name="ok"
              type="pf"
            />
             Envoy Health:
          </strong>
           1 / 1
          <br />
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate:
          </strong>
           No requests over last 10 minutes
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
